# HSE_ML_OPS_test

./: .pre-commit-config.yaml  data.dvc  model.dvc  pyproject.toml
.dvc/: config
hw/: infer.py  train.py
